[gd_scene load_steps=5 format=3 uid="uid://dic5onsop66y4"]

[ext_resource type="Script" uid="uid://m5523258iyd1" path="res://src/ui/menus/game_menu.gd" id="1_8ljcd"]
[ext_resource type="Theme" uid="uid://casdoijkjemc2" path="res://src/ui/resources/menu_theme.tres" id="2_jjy7d"]
[ext_resource type="PackedScene" uid="uid://d2i1eypiamq2d" path="res://src/ui/menus/how_to_play.tscn" id="3_ocxaj"]
[ext_resource type="PackedScene" uid="uid://c3r030661il6l" path="res://src/ui/menus/options_menu.tscn" id="4_vcrdi"]

[node name="GameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ljcd")
show_how_to_play_on_start = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -204.5
offset_right = 108.0
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Message" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_jjy7d")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="VBoxButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonContinue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_jjy7d")
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="ButtonOptions" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_jjy7d")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="ButtonHow" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_jjy7d")
theme_override_font_sizes/font_size = 50
text = "How To Play"

[node name="ButtonQuit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_jjy7d")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="HowToPlay" parent="." instance=ExtResource("3_ocxaj")]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource("4_vcrdi")]
visible = false
